manifest/objects/DNBConnect__D_B_Connect_Company_Profile__c.object
<CustomObject>
    <description>Holds all D&amp;B data fields for the matched company record</description>
    <fields>
        <fullName>DNBConnect__DUNSNumber__c</fullName>
        <description>The Dun &amp; Bradstreet D-U-N-S® Number is an identification number assigned by Dun &amp; Bradstreet that uniquely identifies the entity in accordance with the Data Universal Numbering System (D-U-N-S).</description>
        <externalId>true</externalId>
        <inlineHelpText>The Dun &amp; Bradstreet D-U-N-S® Number is an identification number assigned by Dun &amp; Bradstreet that uniquely identifies the entity in accordance with the Data Universal Numbering System (D-U-N-S).</inlineHelpText>
        <label>D-U-N-S Number</label>
        <length>9</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>DNBConnect__ISO_Alpha_2_Char_Country_Code__c</fullName>
        <description>The two-letter country code, defined by the International Organization for Standardization (ISO) ISO 3166-1 scheme, identifying the country in which the entity is located.</description>
        <inlineHelpText>The two-letter country code, defined by the International Organization for Standardization (ISO) ISO 3166-1 scheme, identifying the country in which the entity is located.</inlineHelpText>
        <label>ISO Alpha 2 Char Country Code</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNBConnect__PrimName__c</fullName>
        <description>The single name by which the entity is primarily known or identified.</description>
        <inlineHelpText>The single name by which the entity is primarily known or identified.</inlineHelpText>
        <label>Primary Business Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>D&amp;B Connect Company Profile</label>
    <nameField>
        <label>D&amp;B Connect Company Profile Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>D&amp;B Connect Company Profiles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>